--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent"
 
         android:layout_marginBottom="4dp"
-        android:padding="16dp"
+        android:layout_marginHorizontal="8dp"
 
         app:defaultNavHost="true"
         app:navGraph="@navigation/navigation_bottom" />
