--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,18 +16,8 @@
     </style>
 
     <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-<!--        <item name="actionBarSize">0dp</item>-->
-
-        <item name="android:textViewStyle">
-            @style/textViewStyle
-        </item>
-
-        <item name="snackbarTextViewStyle">
-            @style/Theme.Snackbar
-        </item>
-
-        <item name="android:buttonStyle">
-            @style/Theme.Button
-        </item>
+        <item name="android:textViewStyle">@style/textViewStyle</item>
+        <item name="snackbarTextViewStyle">@style/Theme.Snackbar</item>
+        <item name="android:buttonStyle">@style/Theme.Button</item>
     </style>
 </resources>
