--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,69 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:divider="@drawable/settings_divider_material"
-    android:dividerPadding="4dp"
 
+    android:layout_width="match_parent"
+
+    android:layout_height="match_parent"
+    android:divider="@color/black"
+
+    android:dividerPadding="8dp"
     android:orientation="vertical"
     android:showDividers="middle"
     tools:context=".ui.fragments.settings.SettingsFragment">
 
     <LinearLayout
-        android:id="@+id/llComplexGameMode"
+        android:id="@+id/llSettigns"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
 
-        android:dividerPadding="16dp"
-        android:divider="@drawable/inner_settings_divider_material"
+        android:layout_weight="9"
+        android:divider="@drawable/settings_divider_material"
+        android:dividerPadding="4dp"
         android:orientation="vertical"
         android:showDividers="middle">
 
-        <TextView
-            android:id="@+id/tvComplexGameMode"
-            style="@style/SettingsTextViewStyle"
+        <LinearLayout
+            android:id="@+id/llComplexGameMode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/complex_game_mode" />
 
-        <RadioGroup
-            android:id="@+id/rbgComplexGameMode"
+            android:divider="@drawable/inner_settings_divider_material"
+            android:dividerPadding="16dp"
+            android:orientation="vertical"
+            android:showDividers="middle">
+
+            <TextView
+                android:id="@+id/tvComplexGameMode"
+                style="@style/PreferenceTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/complex_game_mode" />
+
+            <RadioGroup
+                android:id="@+id/rbgComplexGameMode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/rbBasic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/basic_mode" />
+
+                <RadioButton
+                    android:id="@+id/rbSingle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/single_mode" />
+
+                <RadioButton
+                    android:id="@+id/rbChoice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/choise_mode" />
+
+                <RadioButton
+                    android:id="@+id/rbStack"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/backstack_mode" />
+            </RadioGroup>
+        </LinearLayout>
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/sNightMode"
+            style="@style/PreferenceTextStyle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:id="@+id/rbBasic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/basic_mode"
-                app:useMaterialThemeColors="true" />
-
-            <RadioButton
-                android:id="@+id/rbSingle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/single_mode" />
-
-            <RadioButton
-                android:id="@+id/rbChoice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/choise_mode" />
-
-            <RadioButton
-                android:id="@+id/rbStack"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/backstack_mode" />
-        </RadioGroup>
+            android:layout_height="wrap_content"
+            android:text="@string/night_theme" />
     </LinearLayout>
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/sNightMode"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/night_mode" />
+        android:text="@string/confirm" />
 
 </LinearLayout>
