--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
         <item name="android:padding">5dp</item>
     </style>
 
-    <style name="SettingsTextViewStyle">
-        <item name="android:textSize">32sp</item>
+    <style name="PreferenceTextStyle">
+        <item name="android:textSize">20sp</item>
     </style>
 </resources>
