--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,4 +41,18 @@
     <style name="PreferenceTextStyle">
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="rules_tv_style" parent="textViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAlignment">gravity</item>
+
+    </style>
+
+    <style name="rules_image_style">
+        <item name="android:layout_width">110dp</item>
+        <item name="android:layout_height">150dp</item>
+
+    </style>
 </resources>
