--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,21 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="8dp">
+    android:layout_height="match_parent">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="0dp"
+
+        android:background="?android:attr/windowBackground"
+        android:paddingStart="8dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-
-        android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu" />
 
     <fragment
@@ -26,15 +24,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
 
+        android:layout_marginVertical="5dp"
+        android:layout_marginHorizontal="10dp"
+
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-        android:layout_marginBottom="4dp"
-        android:layout_marginHorizontal="8dp"
-
-        app:defaultNavHost="true"
         app:navGraph="@navigation/navigation_bottom" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
