--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.TicTacTab" parent="Theme.TicTacTab.Base">
         <item name="colorOnPrimary">@color/white</item>
-
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_500</item>
