--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="gray">#202020</color>
+    <color name="gray_200">#202020</color>
+    <color name="gray_400">#151515</color>
 
     <color name="transparent">#00000000</color>
 
