--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,10 +5,11 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TicTacTab.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_500</item>
+        <item name="colorPrimaryDark">?attr/colorPrimary</item>
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/orange_200</item>
