--- a/app/src/main/res/layout/final_line_layout.xml
+++ b/app/src/main/res/layout/final_line_layout.xml
@@ -9,7 +9,8 @@
         android:id="@+id/vLine"
         android:layout_width="match_parent"
         android:layout_height="15dp"
-        android:background="?attr/colorAccent"
+        android:background="@drawable/rounded_background"
+        android:backgroundTint="?attr/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
