--- a/app/src/main/res/layout/fragment_complex_game_session.xml
+++ b/app/src/main/res/layout/fragment_complex_game_session.xml
@@ -180,7 +180,8 @@
         android:layout_height="wrap_content"
 
         android:text="@string/current_player_message"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        style="@style/TitleTextStyle"/>
 
     <ImageView
         android:id="@+id/ivGameDisplay"
