--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,13 @@
         android:layout_height="wrap_content"
 
         android:background="?android:attr/windowBackground"
-        android:paddingStart="8dp"
+        android:paddingHorizontal="8dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"
+        style="@style/Theme.Navigation"/>
 
     <fragment
         android:id="@+id/nav_host_fragment"
@@ -32,6 +33,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/navigation_bottom" />
+        app:navGraph="@navigation/navigation_bottom"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
