--- a/app/src/main/res/layout/fragment_game_main.xml
+++ b/app/src/main/res/layout/fragment_game_main.xml
@@ -15,7 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/game_mode"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        style="@style/TitleTextStyle"/>
 
     <Button
         android:id="@+id/bStartClassic"
