--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -8,7 +8,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:text="@string/in_development"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        style="@style/TitleTextStyle"/>
 
 </FrameLayout>
