--- a/app/src/main/res/layout/fragment_game_main.xml
+++ b/app/src/main/res/layout/fragment_game_main.xml
@@ -26,11 +26,26 @@
         android:layout_marginTop="16dp"
         android:text="@string/title_classic"/>
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1" />
+
+    <Spinner
+        android:id="@+id/spinGameModeSelector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/bStartComplex"
         style="@style/Theme.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_complex"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="5" />
 
 </LinearLayout>
