--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -24,62 +24,10 @@
         android:showDividers="middle">
 
         <LinearLayout
-            android:id="@+id/llComplexGameMode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:divider="@drawable/inner_settings_divider_material"
-            android:dividerPadding="16dp"
-            android:orientation="vertical"
-            android:showDividers="middle">
-
-            <TextView
-                android:id="@+id/tvComplexGameMode"
-                style="@style/TitleTextStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/complex_game_mode" />
-
-            <RadioGroup
-                android:id="@+id/rbgComplexGameMode"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <RadioButton
-                    android:id="@+id/rbChoice"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/complex_mode_0"
-                    style="@style/PreferenceTextStyle" />
-
-                <RadioButton
-                    android:id="@+id/rbStack"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/complex_mode_1"
-                    style="@style/PreferenceTextStyle" />
-
-                <RadioButton
-                    android:id="@+id/rbSingle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/complex_mode_2"
-                    style="@style/PreferenceTextStyle" />
-
-                <RadioButton
-                    android:id="@+id/rbBasic"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/complex_mode_3"
-                    style="@style/PreferenceTextStyle" />
-
-            </RadioGroup>
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            tools:ignore="UselessParent">
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/sNightMode"
